--- a/src/app/reset.scss
+++ b/src/app/reset.scss
@@ -24,7 +24,10 @@ h6 {
   margin: 0;
   padding: 0;
 }
-
+body,
+html {
+  height: 100%;
+}
 h1,
 h2,
 h3,
@@ -79,7 +82,10 @@ th {
   padding: 0;
 }
 
-#root {
+#container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   max-width: 1120px;
   margin: 0 auto;
 }
