--- a/src/components/BookListItem/bookListItem.module.scss
+++ b/src/components/BookListItem/bookListItem.module.scss
@@ -1,6 +1,12 @@
 .bookContainer {
   display: flex;
   flex-direction: column;
+  cursor: pointer;
+}
+
+.navLink {
+  color: inherit;
+  text-decoration: none;
 }
 
 .imageBckg {
@@ -28,6 +34,7 @@
 }
 
 .price {
+  color: #313037;
   font-size: 24px;
   line-height: 133%;
   font-family: var(--my-font-bebas);
