feat(singleBook): add description block

--- a/src/components/BookSingle/bookSingle.module.scss
+++ b/src/components/BookSingle/bookSingle.module.scss
@@ -30,3 +30,12 @@
 .nameDetail {
   color: #a8a8a8;
 }
+
+.description {
+  font-family: var(--my-font-heliosRegular);
+  color: #313037;
+}
+
+.descriptionHead {
+  font-family: var(--my-font-heliosRegular);
+}
